--- a/src/Finances.WinClient/Views/TransferEditorView.xaml
+++ b/src/Finances.WinClient/Views/TransferEditorView.xaml
@@ -4,11 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
+            d:DataContext="{d:DesignData Source=/DesignTimeData/Transfer.xaml}"
              MinWidth="350"
              d:DesignHeight="350" d:DesignWidth="300">
     
     <UserControl.Resources>
-        <DataTemplate x:Key="BankAccountTemplate">
+        <!--<DataTemplate x:Key="BankAccountTemplate">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -18,7 +19,7 @@
                 <Image Source="{Binding Bank.Logo}" Height="25" Width="50"/>
                 <TextBlock Grid.Column="2" Text="{Binding AccountName}"/>
             </Grid>
-        </DataTemplate>
+        </DataTemplate>-->
     </UserControl.Resources>
     
     <Grid Grid.IsSharedSizeScope="True" 
@@ -38,7 +39,7 @@
             </Style>
             <Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type Control}}">
                 <Setter Property="Background" Value="Beige" />
-                <Setter Property="Height" Value="25" />
+                <Setter Property="MinHeight" Value="25" />
                 <Setter Property="Width" Value="350" />
                 <Setter Property="HorizontalAlignment" Value="Left" />
                 <Setter Property="VerticalContentAlignment" Value="Center" />
